package Mutxamel_FC;
public abstract class A_Mutxamel implements I_FuncionesIntegrantes{
    private String nombre;
    private int edad;

    public A_Mutxamel(String nombre, int edad) {
        this.nombre = nombre;
        this.edad = edad;
    }
}