package Mutxamel_FC;
public enum E_Equipos {
    BENJAMIN, ALEVIN, INFANTIL, CADETE, JUVENIL, SENIOR;
}