package Mutxamel_FC;
public enum E_Posiciones {
    PORTERO, DEFENSA, CENTROCAMPISTA, DELANTERO;
}
