package Mutxamel_FC;
public interface I_AccionesDeportivas {
    void entrenar();
    void jugarPartido(String rival);
}
