package Mutxamel_FC;
public interface I_FuncionesIntegrantes {
    void concentrarse();
    void viajar(String ciudad);
    void celebrarGol();
}
